# lightcurve-strategies

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  README.rst  docker-compose.yml  noxfile.py  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: api.rst  claude-usage.md  conf.py  example_light_curve.rst  example_noise.rst  index.rst  installation.rst
src/lightcurve_strategies/: __init__.py  _units.py  keplerian.py  light_curves.py  starry.py  transit.py
tests/: test_keplerian.py  test_light_curves.py  test_starry.py  test_transit.py
