[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lightcurve-strategies"
version = "0.1.0"
description = "Generate lightcurve timeseries data using Hypothesis strategies and jaxoplanet"
requires-python = ">=3.11"
dependencies = [
    "jaxoplanet",
    "hypothesis",
    "astropy",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-hypothesis",
    "pre-commit",
    "ruff",
    "mypy",
    "bandit",
    "codespell",
]
docs = [
    "sphinx>=7.0",
    "furo",
    "sphinx-copybutton",
    "matplotlib",
]

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = ["astropy.*", "jaxoplanet.*", "jax.*", "hypothesis.*", "numpy.*", "pytest.*"]
ignore_missing_imports = true

[tool.bandit]
exclude_dirs = ["tests"]

[tool.codespell]
skip = "devpython,*.egg-info,.git,docs/_build"
ignore-words-list = "lightcurve"
